--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,134 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap');
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+body {
+  font-family: 'Montserrat', sans-serif;
+}
 .App {
   text-align: center;
+  background: url(./assets/background.png);
+  height: 100vh;
+  background-size: contain;
+  position: relative;
+  z-index: 1;
+}
+.App::after {
+  position: absolute;
+  content: "";
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  background-color: #FF0062;
+  mix-blend-mode: multiply;
+  z-index: 2;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+header {
+  width: 100vw;
+  height: 80px;
+  background-color: #1F2326;
   display: flex;
-  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0 20px;
+  position: relative;
+  z-index: 3;
+}
+.header__menu {
+  display: flex;
+  align-items: center;
+}
+nav > ul {
+  list-style: none;
+  display: flex;
+}
+nav > ul > li > a, nav > ul > li{
+  text-decoration: none;
+  color: white;
+  text-transform: uppercase;
+  font-size: 14px;
+  margin-right: 15px;
+  font-weight: 700;
+} 
+nav > ul > li > a:hover,nav > ul > li:hover {
+  filter: brightness(80%);
+}
+.dropdown__menu {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  cursor: pointer;
+  position: relative;
+  z-index: 3;
+}
+.dropdown__menu > img {
+  width: 10px;
+  margin-left: 8px;
+}
+.dropdown__menu::before {
+  content: "";
+  background: url(assets/Polygon.png);
+  background-size: cover;
+  background-repeat: no-repeat;
+  width: 15px;
+  height: 10px;
+  position: absolute;
+  bottom: -20px;
+  left: 26px;
+  transform: rotateX(180deg);
+  display: none;
+}
+.menu__container {
+  width: 150px;
+  height: 200px;
+  background-color: white;
+  position: absolute;
+  bottom: -218px;
+  border-radius: 20px;
+  left: -40px;
+  display: none;
+}
+nav > ul > li:hover::before{
+  display: inline-block;
+}
+nav > ul > li:hover > .menu__container{
+  display: initial;
+}
+.header__icons {
+  display: flex;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+}
+.icons__valorant {
+  padding-left: 40px;
+  padding-right: 56px;
+}
+.icons__riot {
+  padding-right: 40px;
+}
+.vertical_bar {
+  background-color: white;
+  width: 2px;
+  height: 42px;
+  display: inline-block;
+  padding: 0;
+}
+
+.header__user {
+  display: flex;
+  align-items: center;
+}
+
+.header__user > * {
+  padding: 0 7px;
+}
+.user__name {
+  text-transform: uppercase;
   color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+  font-size: 14px;
+  font-weight: 700;
 }
